# CMakeList.txt : CMake project for Vady Maze, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Vady Maze")

# Add source to this project's executable.
add_executable (CMakeTarget "Vady Maze.cpp" "Vady Maze.h")

# TODO: Add tests and install targets if needed.
